# gcloud-storage

./: Cargo.toml  README.md
src/: lib.rs  model.rs  storage.rs
src/model/: object_metadata.rs  service_account.rs
src/storage/: bucket.rs  credentials.rs  jwt.rs  object.rs
