[package]
name = "gcloud-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = [ "serde" ] }
base64 = "0.21.5"
openssl = { version = "0.10.62", features = [ "vendored" ] }
tokio = { version = "1.35.0", features = [ "fs" ] }
tokio-util = { version = "0.7.10", features = ["codec"] }
anyhow = "1.0.78"
